<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="detailViewModel"
            type="husaynhakeem.io.kotlin_sample.detail.DetailViewModel" />
    </data>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/detail_content_margin"
            android:layout_marginRight="@dimen/detail_content_margin">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="@dimen/cardview_default_radius"
                app:cardElevation="@dimen/cardview_default_elevation">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/iv_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/iv_username_description"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_username" />

                    <TextView
                        android:id="@+id/tv_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:text="@{detailViewModel.username}"
                        app:layout_constraintBottom_toTopOf="@+id/iv_username"
                        app:layout_constraintLeft_toRightOf="@+id/iv_username"
                        app:layout_constraintTop_toBottomOf="@+id/iv_username"
                        tools:text="husaynhakeem" />

                    <ImageView
                        android:id="@+id/iv_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/iv_gender_description"
                        app:layout_constraintLeft_toLeftOf="@+id/iv_username"
                        app:layout_constraintTop_toBottomOf="@+id/iv_username"
                        app:srcCompat="@drawable/ic_gender" />

                    <TextView
                        android:id="@+id/tv_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:text="@{detailViewModel.gender}"
                        app:layout_constraintBottom_toTopOf="@+id/iv_gender"
                        app:layout_constraintLeft_toRightOf="@+id/iv_gender"
                        app:layout_constraintTop_toBottomOf="@+id/iv_gender"
                        tools:text="Male" />

                    <ImageView
                        android:id="@+id/iv_birthday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/iv_birthday_description"
                        app:layout_constraintLeft_toLeftOf="@+id/iv_gender"
                        app:layout_constraintTop_toBottomOf="@+id/iv_gender"
                        app:srcCompat="@drawable/ic_birthday" />

                    <TextView
                        android:id="@+id/tv_birthday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:text="@{detailViewModel.birthday}"
                        app:layout_constraintBottom_toTopOf="@+id/iv_birthday"
                        app:layout_constraintLeft_toRightOf="@+id/iv_birthday"
                        app:layout_constraintTop_toBottomOf="@+id/iv_birthday"
                        tools:text="20 November, 1993" />

                    <ImageView
                        android:id="@+id/iv_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/iv_location_description"
                        app:layout_constraintLeft_toLeftOf="@+id/iv_birthday"
                        app:layout_constraintTop_toBottomOf="@+id/iv_birthday"
                        app:srcCompat="@drawable/ic_location" />

                    <TextView
                        android:id="@+id/tv_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:text="@{detailViewModel.location}"
                        app:layout_constraintBottom_toTopOf="@+id/iv_location"
                        app:layout_constraintLeft_toRightOf="@+id/iv_location"
                        app:layout_constraintTop_toBottomOf="@+id/iv_location"
                        tools:text="Casablanca, Morocco" />

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                app:cardCornerRadius="@dimen/cardview_default_radius"
                app:cardElevation="@dimen/cardview_default_elevation">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/iv_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/iv_email_description"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_email" />

                    <TextView
                        android:id="@+id/tv_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:text="@{detailViewModel.email}"
                        app:layout_constraintBottom_toTopOf="@+id/iv_email"
                        app:layout_constraintLeft_toRightOf="@+id/iv_email"
                        app:layout_constraintTop_toBottomOf="@+id/iv_email"
                        tools:text="husaynhakeem@gmail.com" />

                    <ImageView
                        android:id="@+id/iv_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/iv_phone_description"
                        app:layout_constraintLeft_toLeftOf="@+id/iv_email"
                        app:layout_constraintTop_toBottomOf="@+id/iv_email"
                        app:srcCompat="@drawable/ic_phone" />

                    <TextView
                        android:id="@+id/tv_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:text="@{detailViewModel.phone}"
                        app:layout_constraintBottom_toTopOf="@+id/iv_phone"
                        app:layout_constraintLeft_toRightOf="@+id/iv_phone"
                        app:layout_constraintTop_toBottomOf="@+id/iv_phone"
                        tools:text="+212 5 22 32 12 53" />

                    <ImageView
                        android:id="@+id/iv_cell"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/iv_cell_description"
                        app:layout_constraintLeft_toLeftOf="@+id/iv_phone"
                        app:layout_constraintTop_toBottomOf="@+id/iv_phone"
                        app:srcCompat="@drawable/ic_cell" />

                    <TextView
                        android:id="@+id/tv_cell"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:text="@{detailViewModel.cell}"
                        app:layout_constraintBottom_toTopOf="@+id/iv_cell"
                        app:layout_constraintLeft_toRightOf="@+id/iv_cell"
                        app:layout_constraintTop_toBottomOf="@+id/iv_cell"
                        tools:text="+212 6 27 29 11 93" />

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</layout>